# newsgrabber

./: .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pre-commit.yml  release.yml  test.yml
newsgrabber/: __about__.py  __init__.py  network_manager.py  parser.py  utils.py
newsgrabber/models/: news_url.py
tests/: __init__.py  test1.py  test_utils.py
